// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`users reducer should GET_USERS_BY_ID_FULFILLED 1`] = `
Object {
  "dataTypes": Array [],
  "errorMessage": "",
  "isError": false,
  "isPending": false,
  "user": Object {},
}
`;

exports[`users reducer should GET_USERS_BY_ID_PENDING 1`] = `
Object {
  "dataTypes": Array [],
  "errorMessage": "",
  "isError": false,
  "isPending": true,
}
`;

exports[`users reducer should GET_USERS_BY_ID_REJECTED 1`] = `
Object {
  "dataTypes": Array [],
  "errorMessage": "",
  "isError": true,
  "isPending": false,
}
`;

exports[`users reducer should GET_USERS_FULFILLED 1`] = `
Object {
  "dataTypes": Array [],
  "errorMessage": "",
  "isError": false,
  "isPending": false,
  "userList": Object {},
  "usersCount": 10,
}
`;

exports[`users reducer should GET_USERS_PENDING 1`] = `
Object {
  "dataTypes": Array [],
  "errorMessage": "",
  "isError": false,
  "isPending": true,
  "user": null,
}
`;

exports[`users reducer should GET_USERS_REJECTED 1`] = `
Object {
  "dataTypes": Array [],
  "errorMessage": "",
  "isError": true,
  "isPending": false,
}
`;

exports[`users reducer should return the initial state 1`] = `
Object {
  "errorMessage": "",
  "isError": false,
  "isPending": false,
  "user": null,
  "userList": Array [],
  "usersCount": 0,
}
`;
